button unaligned fixed

--- a/src/style/css/style.css
+++ b/src/style/css/style.css
@@ -335,7 +335,6 @@ table thead tr .numberUser, table thead tr .given, table tbody tr .numberUser, t
   border-radius: 5px;
   cursor: pointer;
   width: 100%;
-  margin-top: 3vh;
 }
 
 .participantButtonValidate {
