--- a/src/style/scss/components/_button.scss
+++ b/src/style/scss/components/_button.scss
@@ -61,7 +61,6 @@
   border-radius: 5px;
   cursor: pointer;
   width: 100%;
-  margin-top: 3vh;
 }
 
 .participantButtonValidate {
